Fix disappearing results pane when using the Pen plugin. Issue was visible only when not using codemirror (the demo uses both). Fixes #40.

--- a/src/plugins/pen.styl
+++ b/src/plugins/pen.styl
@@ -38,6 +38,7 @@
   display: none;
 }
 
+.jotted-plugin-pen .jotted-pane-result,
 .jotted-plugin-pen.jotted-has-html .jotted-pane-html,
 .jotted-plugin-pen.jotted-has-css .jotted-pane-css,
 .jotted-plugin-pen.jotted-has-js .jotted-pane-js,
